Fixed issue with images & embeds being 1 pixel too wide for their containers

--- a/styles/main.less
+++ b/styles/main.less
@@ -151,12 +151,12 @@ a, a:hover, a:visited, a:active {
 
 .columnizer-cols2 .columnizer-col {
   width: 469px;
-  margin-left: 20px;
+  margin-left: 22px;
 }
 
 .columnizer-cols3 .columnizer-col {
   width: 306px;
-  margin-left: 20px;
+  margin-left: 21px;
 }
 
 .columnizer-row .first, .columnizer-row .columnizer-col:first-child{
